--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
+Click==7.0
 dj-database-url==0.5.0
 Django==2.2.1
 djangorestframework==3.9.4
+Flask==1.0.2
+get==2019.4.13
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
 Pillow==6.0.0
 pkg-resources==0.0.0
+post==2019.4.13
 psycopg2==2.8.2
+public==2019.4.13
 python-decouple==3.1
 pytz==2019.1
+query-string==2019.4.13
+request==2019.4.13
 sqlparse==0.3.0
+Werkzeug==0.15.2
