--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Click==7.0
 dj-database-url==0.5.0
 Django==2.2.1
+django-heroku==0.3.1
 djangorestframework==3.9.4
 Flask==1.0.2
 get==2019.4.13
@@ -18,3 +19,4 @@ query-string==2019.4.13
 request==2019.4.13
 sqlparse==0.3.0
 Werkzeug==0.15.2
+whitenoise==4.1.2
