--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Click==7.0
 dj-database-url==0.5.0
 Django==2.2.1
+django-cors-headers==3.0.0
 django-heroku==0.3.1
 djangorestframework==3.9.4
 get==2019.4.13
